# blog

./: README.md
cbmc_binsearch/: bin_search_cbmc0.c  bin_search_cbmc1.c  bin_search_cbmc2.c
coverage-find-median/: Solution.java  expectedOutput.txt  output.txt
cpp_unit_testing/: CMakeLists.txt  dog_toy.cpp
cpp_unit_testing/after_unit_tests/: CMakeLists.txt
cpp_unit_testing/after_unit_tests/include/: dog.h  toy.h
cpp_unit_testing/after_unit_tests/src/: dog.cpp
cpp_unit_testing/after_unit_tests/test/: mock_toy.h  test_dog.cpp
cpp_unit_testing/before_unit_tests/: License.md
cpp_unit_testing/src/: main.cpp  toy.cpp
dd-median/: input.txt
dd-median/dd/: DeltaDebug.java  MedianDD.java  MyDeltaDebug.java
dd-median/sol/: SolutionNew.java  SolutionOriginal.java
deque-unit-testing/: DequeTest.java
fixtures/: file_stats.py  test_file_stats.py
flask/: app.py  docker-compose.yml
flask-mongo-stars/: License.md  app.py  app_setup.py
hypothesis-fuzz/: test_fuzz_stars.py
jenkins-dockerized-test/: Dockerfile  docker-compose.yml  test_um_pytest.py  unnecessary_math.py
jpf-docker/: Dockerfile  docker-compose-build.yml  site.properties
jpf-docker/myJPF/: Example.jpf
jpf/fruitPuzzle/: FruitPuzzle.jpf  expectedOutput.txt
jpf/mergeSort/: MergeSort.jpf  build.xml
jpf/myJPF/: Example.jpf  build.xml  (+1 more)
maze/: maze.py
pact/: consumer.py  test_consumer.py
random-testing-wisdom/: random_testing.c
sokoban_astar/: ida.py  main.py  move.py  node.py  state.py
stars-client/: test_star.py
stars-client-parametrized/: star.py  test_star.py
(+7 files in other folders)
